<resources>
    <string name="app_name">Park&amp;Go</string>
    <string name="title_activity_maps">Map</string>
    <string name="autores">Andrea Lobo y Rubén Ortega</string>
    <string name="guardar_aparcamiento">Guardar aparcamiento</string>
    <string name="mi_coche">¿Dónde está mi coche?</string>
    <string name="buscar">Buscar lugares</string>
    <string name="aparcamientos_publicos">Aparcamientos Públicos </string>
    <string name="ocio">Teatros</string>
    <string name="embajadas_y_consulados">Embajadas y consulados</string>
    <string name="todo">Todo</string>
    <string name="filtrar">Filtrar</string>
    <string name="favoritos">Favoritos</string>
    <string name="llamar">Llamar a emergencias</string>
    <string name="_112">112</string>
    <string name="transporte_compartido">Transporte compartido</string>
    <string name="patinetes_electricos">Patinetes eléctricos</string>
    <string name="bicicletas_electricas">Bicicletas eléctricas</string>
    <string name="carsharing">Carsharing</string>
    <string name="motosharing">Motosharing</string>
    <string name="filtrar_busqueda">Filtrar búsqueda</string>
    <string name="distancia_metros">Distancia máxima (en metros)</string>
    <string name="ir">Filtrar</string>
    <string name="guardar">Guardar</string>
    <string name="nombre_de_lugar_favorito">NOMBRE DE LUGAR FAVORITO</string>
    <string name="teatros">TEATROS</string>
    <string name="consulados_y_embajadas">CONSULADOS Y EMBAJADAS</string>
    <string name="parkings_pUblicos">PARKINGS PÚBLICOS</string>
    <string name="gestion_parking">Gestión parking</string>
    <string name="logo">logo</string>
    <string name="todos">Embajadas, Parkings y Teatros</string>
    <string name="metros">A %1$.0f metros</string>
    <string name="fav_correcto">Añadido correctamente a favoritos</string>
    <string name="no_favs">No existen favoritos</string>
    <string name="your_location">Your location</string>
    <string name="distancia_coche">Su vehiculo se encuentra a %1$.0f metros</string>
    <string name="alerta_proximidad">Alerta de proximidad !!</string>
    <string name="borrado_correcto">Borrado correctamente</string>
    <string name="borrar_fav">Borrar favorito</string>
    <string name="mostrar_todo">Mostrar todo</string>
    <string name="add_fav">Añadir Favorito</string>
    <string name="location_activated">Location Service Activated</string>
    <string name="gps_granted">GPS Permission granted!</string>
    <string name="gps_denied">Permission denied by user!</string>
    <string name="aparcamiento_guardado">Aparcamiento guardado correctamente</string>
    <string name="aparcamiento_noguardado">No has guardado aparcamiento</string>
    <string name="cargando">cargando</string>
    <string name="no_gps">No está activado el GPS</string>
    <string name="ya_fav">Ya está en favoritos</string>
</resources>
