<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

            <ImageView
                android:layout_width="280dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/bTeatros"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:outlineAmbientShadowColor="@color/colorPrimary"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ocio"
                    android:theme="@style/Personalizado" />

                <ImageButton
                    android:id="@+id/bParkings"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:outlineAmbientShadowColor="@color/colorPrimary"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/carcolor"
                    android:theme="@style/Personalizado" />

                <ImageButton
                    android:id="@+id/bEmbajadas"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:outlineAmbientShadowColor="@color/colorPrimary"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/embajada"
                    android:theme="@style/Personalizado" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/llamar"
                android:textSize="12pt" />

            <Button
                android:id="@+id/numTel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:text="@string/_112"
                android:textColor="@color/white"
                android:textSize="18pt"
                android:theme="@style/Widget.MaterialComponents.Button.UnelevatedButton" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navview"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header_navigation_drawer"
        app:menu="@menu/nav_options" />

</androidx.drawerlayout.widget.DrawerLayout>


